# stupipy

./: .docblock.json  CHANGELOG.rst  LICENSE.rst  README.rst  requirements.txt  setup.cfg
docs/source/: conf.py  index.rst
src/: PROJ_ASCII.txt  README.rst
src/stupipy/: cli.py  constants.py  content.py  documentation.py  license.py  sphinx.py  structure.py
src/stupipy/locales/es/LC_MESSAGES/: base.po
src/test/: test_structure.py
