[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[metadata]
name = stupipy
version = 0.1.0
author = Jonathan Boone
author_email = jeboone@gmail.com
description = A tool to create python directory structure
long_description = file: README.rst
license = MIT
url = https://pypi.org/project/stupipy/
project_urls =
  Bug Tracker = https://github.com/boonej/stupipy/issues
  Documentation = https://stupipy.readthedocs.io/
  Source Code = https://github.com/boonej/stupipy
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.6
install_requires =
  pyfiglet

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  stupipy = stupipy.cli:base
